--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,17 +1,17 @@
+################################# Default configuration ###################
 baseURL = "https://charles-cantin.netlify.com"
+# disable language
 disableLanguages = []
+# disqus short name
 disqusShortname = ""
+# post pagination
 paginate = "6"
+# post excerpt
 summaryLength = "15"
 theme = "meghna-hugo"
 title = "Charles Cantin Photographe"
-[Languages.en]
-contentDir = "content/english"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Home"
-languageCode = "en-us"
-languageName = "En"
-weight = 1
+
+################### English Navigation ########################
 [[Languages.en.menu.main]]
 name = "portfolio"
 url = "#portfolio"
@@ -24,13 +24,8 @@ weight = 5
 name = "contact"
 url = "#contact"
 weight = 7
-[Languages.fr]
-contentDir = "content/french"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Accueil"
-languageCode = "fr-fr"
-languageName = "Fr"
-weight = 2
+
+################### French Navigation ########################
 [[Languages.fr.menu.main]]
 name = "Portfolio"
 url = "#portfolio"
@@ -43,21 +38,36 @@ weight = 5
 name = "Contact"
 url = "#contact"
 weight = 7
+
+############################# Default Parameters ##########################
 [params]
 author = "Themefisher"
 description = "Site Web de Charles Cantin photographe"
 google_analytics_id = ""
 logo = "/images/logo-charles-cantin.png"
 post_share = true
+
+
+# preloader
+[params.preloader]
+enable = false
+preloader = "images/logo.png"
+
+# cookies
 [params.cookies]
 enable = false
 expire_days = 2
+
+# google map
 [params.map]
 enable = false
 gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
 map_latitude = "51.5223477"
 map_longitude = "-0.1622023"
 map_marker = "images/marker.png"
+
+############################# Plugins ##########################
+# css plugins
 [[params.plugins.css]]
 link = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
@@ -68,6 +78,8 @@ link = "plugins/magnific-popup/magnific-popup.css"
 link = "plugins/slick/slick.css"
 [[params.plugins.css]]
 link = "https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700&display=swap"
+
+# js plugins
 [[params.plugins.js]]
 link = "plugins/jquery/jquery.min.js"
 [[params.plugins.js]]
@@ -82,9 +94,8 @@ link = "plugins/magnific-popup/jquery.magnific-popup.min.js"
 link = "plugins/lazy-load/lozad.min.js"
 [[params.plugins.js]]
 link = "plugins/google-map/map.js"
-[params.preloader]
-enable = false
-preloader = "images/logo.png"
+
+############################# social icons ##########################
 [[params.social]]
 icon = "ti-facebook"
 link = "#"
@@ -103,3 +114,20 @@ link = "#"
 [[params.social]]
 icon = "ti-pinterest"
 link = "#"
+################################ English Language ########################
+[Languages.en]
+languageName = "En"
+languageCode = "en-us"
+contentDir = "content/english"
+weight = 1
+home = "Home"
+copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+
+################################ France Language ########################
+[Languages.fr]
+languageName = "Fr"
+languageCode = "fr-fr"
+contentDir = "content/french"
+weight = 2
+home = "Accueil"
+copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
